--- a/SpiNNaker-allocserv/src/main/webapp/META-INF/public-web-resources/spalloc.css
+++ b/SpiNNaker-allocserv/src/main/webapp/META-INF/public-web-resources/spalloc.css
@@ -1,5 +1,4 @@
-<html>
-<%--
+/*
 Copyright (c) 2021 The University of Manchester
 
 This program is free software: you can redistribute it and/or modify
@@ -14,21 +13,11 @@ GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
---%>
-<jsp:include page="head.jsp">
-	<jsp:param value="Spalloc Service Administration" name="title"/>
-</jsp:include>
-<body>
+*/
 
-<h1>Spalloc Service Administration</h1>
-<p>
-<a href="${ machineUri }">Machines</a>
-<p>
-<a href="${ boardsUri }">Boards</a>
-<p>
-<a href="${ usersUri }">Users</a>
-<hr>
-<a href="/system/perform_logout">Log out</a>
-
-</body>
-</html>
+body {
+	font-family: Times, "Times New Roman", serif;
+}
+h1 {
+	font-family: Helvetica, Arial, sans-serif;
+}
