First part of doing machine and job views
Long way to go! Need JS to render the machine on a canvas…

--- a/SpiNNaker-allocserv/src/main/webapp/META-INF/public-web-resources/spalloc.css
+++ b/SpiNNaker-allocserv/src/main/webapp/META-INF/public-web-resources/spalloc.css
@@ -31,8 +31,11 @@ footer {
 
 /* Used to mark columns of tables as semantically containing numbers or text. */
 .numberColumn {
-	text-align: right
+	text-align: right;
 }
 .textColumn {
-	text-align: left
+	text-align: left;
+}
+table.lineTitle > th {
+	text-align: right;
 }
