Tooltips! Also should now show dead boards as dead

--- a/SpiNNaker-allocserv/src/main/webapp/META-INF/public-web-resources/spalloc.css
+++ b/SpiNNaker-allocserv/src/main/webapp/META-INF/public-web-resources/spalloc.css
@@ -39,3 +39,11 @@ footer {
 table.lineTitle > th {
 	text-align: right;
 }
+
+#tooltip {
+	background-color: white;
+	border: 1px solid blue;
+	position: absolute;
+	left: -200px;
+	top: 100px;
+}
