Change pointer on machine map for boards that we have a link for

--- a/SpiNNaker-allocserv/src/main/webapp/META-INF/public-web-resources/spalloc.css
+++ b/SpiNNaker-allocserv/src/main/webapp/META-INF/public-web-resources/spalloc.css
@@ -34,6 +34,9 @@ footer {
 .warningbutton {
 	background-color: #f44336;
 }
+canvas.overlink {
+	cursor: pointer;
+}
 
 /* Used to mark columns of tables as semantically containing numbers or text. */
 .numberColumn {
