--- a/SpiNNaker-allocserv/src/main/webapp/META-INF/public-web-resources/spalloc.css
+++ b/SpiNNaker-allocserv/src/main/webapp/META-INF/public-web-resources/spalloc.css
@@ -32,7 +32,7 @@ footer {
 }
 
 .version {
-	font-size: small;
+	font-size: x-small;
 	opacity: 50%;
 	font-family: Helvetica, Arial, sans-serif;
 }
