Trying to make things work better on my phone!

--- a/SpiNNaker-allocserv/src/main/webapp/META-INF/public-web-resources/spalloc.css
+++ b/SpiNNaker-allocserv/src/main/webapp/META-INF/public-web-resources/spalloc.css
@@ -17,6 +17,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 body {
 	font-size: 16pt;
+	text-size-adjust: none;
 	font-family: Times, "Times New Roman", serif;
 	background-color: white;
 }
