Make the list of users in a group be links

--- a/SpiNNaker-allocserv/src/main/webapp/META-INF/public-web-resources/spalloc.css
+++ b/SpiNNaker-allocserv/src/main/webapp/META-INF/public-web-resources/spalloc.css
@@ -34,6 +34,10 @@ footer {
 	font-size: small;
 }
 
+.minordetail {
+	font-size: small;
+	color: #909090;
+}
 .version {
 	font-size: x-small;
 	opacity: 50%;
